// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with all props 1`] = `
<View
  style={
    Object {
      "bottom": 24.57142857142857,
      "left": 12.285714285714285,
      "position": "absolute",
      "right": 12.285714285714285,
      "zIndex": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 4.914285714285715,
        "flexDirection": "row",
        "height": 78.62857142857143,
        "justifyContent": "center",
        "opacity": 0,
        "padding": 12.285714285714285,
        "transform": Array [
          Object {
            "translateY": -20,
          },
        ],
        "width": 393.1428571428571,
      }
    }
  >
    <SvgMock
      height={30.187755102040814}
      name="checkboxfilled"
      width={30.187755102040814}
    />
    <Text
      style={
        Array [
          Object {
            "fontFamily": "AvenirNextLTPro-Regular",
            "fontSize": 21.13142857142857,
            "fontWeight": "normal",
          },
          Object {
            "color": "#000",
          },
          Object {
            "textAlign": "left",
          },
          Object {
            "paddingHorizontal": 12.285714285714285,
          },
        ]
      }
      theme={
        Object {
          "colors": Object {
            "background": "#FFF",
            "backgroundLayout": "rgba(0, 0, 0, 0.8)",
            "black": "#000",
            "error": "#B00020",
            "greyOpac10": "rgba(53, 53, 53, 0.1)",
            "greyOpac50": "rgba(53, 53, 53, 0.5)",
            "lightgrey": "#D7D7D7",
            "linkColor": "#0000EE",
            "primary": "#FAD000",
            "primaryVariant": "#3700B3",
            "secondary": "#03DAC6",
            "secondaryVariant": "#018786",
            "shadowColor": "#222",
            "textColor": "#000",
            "transparent": "transparent",
            "white": "#FFF",
          },
          "dark": false,
        }
      }
    >
      Successfully verified your phone number
    </Text>
  </View>
</View>
`;

exports[`renders correctly with label 1`] = `
<View
  style={
    Object {
      "bottom": 24.57142857142857,
      "left": 12.285714285714285,
      "position": "absolute",
      "right": 12.285714285714285,
      "zIndex": 1,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "center",
        "backgroundColor": "#FFF",
        "borderRadius": 4.914285714285715,
        "flexDirection": "row",
        "height": 78.62857142857143,
        "justifyContent": "center",
        "opacity": 0,
        "padding": 12.285714285714285,
        "transform": Array [
          Object {
            "translateY": -20,
          },
        ],
        "width": 393.1428571428571,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontFamily": "AvenirNextLTPro-Regular",
            "fontSize": 21.13142857142857,
            "fontWeight": "normal",
          },
          Object {
            "color": "#000",
          },
          Object {
            "textAlign": "left",
          },
          Object {
            "paddingHorizontal": 12.285714285714285,
          },
        ]
      }
      theme={
        Object {
          "colors": Object {
            "background": "#FFF",
            "backgroundLayout": "rgba(0, 0, 0, 0.8)",
            "black": "#000",
            "error": "#B00020",
            "greyOpac10": "rgba(53, 53, 53, 0.1)",
            "greyOpac50": "rgba(53, 53, 53, 0.5)",
            "lightgrey": "#D7D7D7",
            "linkColor": "#0000EE",
            "primary": "#FAD000",
            "primaryVariant": "#3700B3",
            "secondary": "#03DAC6",
            "secondaryVariant": "#018786",
            "shadowColor": "#222",
            "textColor": "#000",
            "transparent": "transparent",
            "white": "#FFF",
          },
          "dark": false,
        }
      }
    >
      Successfully verified your phone number
    </Text>
  </View>
</View>
`;
